@@ -10,6 +10,6 @@ asyncpg
 psycopg2-binary
 geotooldbapi>=2.1
 geotoolapi>=1.23
-meitrackparser>=2.1
+meitrackparser>=2.2
 celery
 kombu
